--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
   <li>Write useful, descriptive messages attached to granular commits in a version control system</li>
   </ul>
   
+  
+  <h3>Starter file prompt</h3>
+  <p>This is an example</p>
+  
+  
+  
 </body>
 </html>
 
