--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" class="nojs">
+<html lang = "en" class = "nojs">
   <head>
     <title>ITMD-362-Lab 2, Sean Reimer</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-    <link rel="stylesheet" media="screen" href="css/reset.css" />
-    <link rel="stylesheet" media="screen" href="css/screen.css" />
+    <meta charset = "utf-8" />
+    <meta name = "viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link rel = "stylesheet" media = "screen" href = "css/reset.css" />
+    <link rel = "stylesheet" media = "screen" href = "css/screen.css" />
   </head>
 
   <body>
+    <form action = "/ITMD-362-Lab2-form-page" method = "post">
+      <ul>
+	    <li>
+	      <label for = "email address">Email Address: </label>
+          <input type = "email" id = "email address" name = "email_address">
+        </li>
+	    <li>
+		  <label for = "phone number">Phone Number: </label>
+		  <input type = "number" id = "phone number" name = "phone_number">
+	    </li>
+	    <li>
+	      <label for = "date of birth">Date of Birth: </label>
+		  <input type = "date" id = "date of birth" name = "date_of_birth">
+	    </li>
+	  </ul>
+    </form>
+	
     <p>testing paragraph</p>
   
   </body>
