--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
   </head>
 
   <body>
+    <!-- I am creating my HTML input form for the email address, phone number, and date of birth -->
     <form action = "/ITMD-362-Lab2-form-page" method = "post">
       <ul>
 	    <li>
-	      <label for = "email address">Email Address: </label>
+	      <label for = "email address">Email Address:</label>
           <input type = "email" id = "email address" name = "email_address">
         </li>
 	    <li>
-		  <label for = "phone number">Phone Number: </label>
+		  <label for = "phone number">Phone Number:</label>
 		  <input type = "number" id = "phone number" name = "phone_number">
 	    </li>
 	    <li>
-	      <label for = "date of birth">Date of Birth: </label>
+	      <label for = "date of birth">Date of Birth:</label>
 		  <input type = "date" id = "date of birth" name = "date_of_birth">
 	    </li>
 	  </ul>
+	  
+	  <!-- I am creating the submit button -->
+	  <li class = "button">
+	    <button type = "submit">Submit</button>
+      </li>
     </form>
 	
     <p>testing paragraph</p>
