--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
       <ul>
 	    <li>
 	      <label for = "email address">Email Address:</label>
-          <input type = "email" id = "email address" name = "email_address">
+          <input type = "email" id = "email address" name = "email_address"/>
         </li>
 	    <li>
 		  <label for = "phone number">Phone Number:</label>
-		  <input type = "number" id = "phone number" name = "phone_number">
+		  <input type = "number" id = "phone number" name = "phone_number"/>
 	    </li>
 	    <li>
 	      <label for = "date of birth">Date of Birth:</label>
-		  <input type = "date" id = "date of birth" name = "date_of_birth">
+		  <input type = "date" id = "date of birth" name = "date_of_birth"/>
 	    </li>
-	  </ul>
 	  
-	  <!-- I am creating the submit button -->
-	  <li class = "button">
-	    <button type = "submit">Submit</button>
-      </li>
+	    <!-- I am creating the submit button -->
+	    <li class = "button">
+	     <button type = "submit">Submit</button>
+        </li>
+	  </ul>
     </form>
 	
     <p>testing paragraph</p>
