--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </li>
 	    <li>
 		  <label for = "phone number">Phone Number:</label>
-		  <input type = "number" id = "phone number" name = "phone_number"/>
+		  <input type = "tel" id = "phone number" name = "phone_number"/>
 	    </li>
 	    <li>
 	      <label for = "date of birth">Date of Birth:</label>
