--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <!-- I am creating my HTML input form for the email address, phone number, and date of birth -->
-    <form action = "/ITMD-362-Lab2-form-page" method = "post">
+    <form action = "/ITMD-362-Lab2-form-page" method = "post" autocomplete = "on">
       <ul>
 	    <li>
 	      <label for = "email address">Email Address:</label>
