--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <form action = "/ITMD-362-Lab2-form-page" method = "post" autocomplete = "on">
       <ul>
 	    <li>
-	      <label for="email address">Email Address:</label>
-          <input type="email" id="email address" name="email_address"/>
+	      <label for="email_address">Email Address:</label>
+          <input type="email" id="email_address" name="email_address"/>
         </li>
 	    <li>
-		  <label for="phone number">Phone Number:</label>
-		  <input type="tel" id = "phone number" name="phone_number"/>
+		  <label for="phone_number">Phone Number:</label>
+		  <input type="tel" id = "phone_number" name="phone_number"/>
 	    </li>
 	    <li>
-	      <label for="date of birth">Date of Birth:</label>
-		  <input type="date" id="date of birth" name="date_of_birth"/>
+	      <label for="date_of_birth">Date of Birth:</label>
+		  <input type="date" id="date_of_birth" name="date_of_birth"/>
 	    </li>
 	  
 	    <!-- I am creating the submit button -->
